// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip does not render tooltip if not in tablet 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip does not render tooltip when tooltip type is not in tooltips array 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly when type is in tooltips array 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#006699",
            "borderRadius": 3,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "top": 0,
            "width": 256,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#006699",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0,
              "shadowRadius": 4,
              "top": -7,
            }
          }
        />
      </View>
    </View>
  </View>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied offsets 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#006699",
            "borderRadius": 3,
            "left": 10,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "top": 10,
            "width": 256,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#006699",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "left": 10,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0,
              "shadowRadius": 4,
              "top": -7,
            }
          }
        />
      </View>
    </View>
  </View>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied placement right 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "zIndex": 9999,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#006699",
            "borderRadius": 3,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "top": 0,
            "width": 256,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#006699",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "left": -16,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0,
              "shadowRadius": 4,
              "top": 20,
              "transform": Array [
                Object {
                  "rotate": "270deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied placement top 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#006699",
            "borderRadius": 3,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": 256,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#006699",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 4,
              "top": "auto",
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied width 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#006699",
            "borderRadius": 3,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "top": 0,
            "width": 100,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#006699",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0,
              "shadowRadius": 4,
              "top": -7,
            }
          }
        />
      </View>
    </View>
  </View>
  bar
</View>
`;
